@startuml
skinparam minClassWidth 50

class Movie {
    - id : Long
    - budget : Long
    - homepage : String
    - String originalLanguage : String
    - String originalTitle : String
    - String overView : String
    - Double popularity : Double
    - releaseDate : LocalDate
    - revenue : Long
    - runtime : Integer
    - status : Status
    - tagline : String
    - title : String
    - voteAverage : Double
    - voteCount : Integer
}

class Genre {
    id : Long
    name : String
}

class Keyword {
    id : Long
    name : String;
}

enum Gender {
    OTHER(0)
    Male(1)
    Female(2)
}

class ProductionCompany {
    - id : Long
    - name : String
}

class ProductionCountry {
    - iso : String
    - name : String
}

class SpokenLanguage {
    - iso : String
    - name : String
}

enum Status {
    Released
}

class Credit {
    - movieId : Long
    - title : String
}

class Cast {
    - castId : Long
    - character : String
    - creditId : String
    - gender : Gender
    - id : Long
    - name : String
    - order : Integer
}

class Crew {
    - creditId : String
    - department : Department
    - gender : Gender
    - id : Long
    - job : String
    - name : String
}

enum Department {
    Actors
    Editing
    Camera
    Sound
    Writing
    Production
    Art
    Directing
    CostumeAndMakeUp
    Crew
    . . . . .
    . . . . .
}

Movie -> "1..*" Genre
Movie -> "1..*" Keyword
Movie -> "1..*" ProductionCountry
Movie -> "1..*" ProductionCompany
Movie -> "1..*" SpokenLanguage
Movie *-- Credit
Movie --> "1" Status
Credit -- "*" Crew
Credit -- "*" Cast
Crew --> "1..*" Department
Crew --> "1" Gender
Cast --> "1" Gender
@enduml